--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G-3 Architects</title>
-    <link rel="stylesheet" href="./AssignmentTwo/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <img src="./AssignmentTwo/images/banner.png" alt="">
+    <img src="./images/banner.png" alt="">
     <h2>Hello I am Tester</h2>
 </body>
 </html>
