--- a/index.html
+++ b/index.html
@@ -1,14 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G-3 Architects</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <img src="./images/banner.png" alt="">
-    <h2>Hello I am Tester</h2>
+    <header>
+        <nav>
+            <div class="nav-tittle">G3 Architects</div>
+            <div class="nav-items">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="brand-text-box">
+            <div class="band-text">
+                <h1 class="brand-tittle">Brand New <br> Group of Architects</h1>
+                <p class="brand-sub-tittle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="brand-btn btn">Join Now</button>
+            </div>
+        </div>
+        <div class="header-banner">
+            <img src="./images/banner.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section class="section-one">
+            <div class="future-img">
+                <div class="future-img-card">
+                    <img src="./images/team1.png" alt="">
+                </div>
+                <div class="future-img-card">
+                    <img src="./images/team2.png" alt="">
+                </div>
+                <div class="future-img-card">
+                    <img src="./images/team3.png" alt="">
+                </div>
+                <div class="future-img-card">
+                    <img src="./images/team4.png" alt="">
+                </div>
+            </div>
+            <div class="future-text">
+                <h2><span class="future-text-quick">Quick List</span> of Our <br> <span class="primary-color">Features</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, illo totam?</p>
+                <button class="btn">Explore More</button>
+            </div>
+        </section>
+        <section class="section-two">
+            <div class="future-text-box">
+                <h2>Features you will <br> love & enjoy</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="future-text-details">
+                    <div class="future-text-card">
+                        <h1>Dexktop & Mobile Version</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="future-text-card">
+                        <h1>Drag & Drop Builder</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="future-text-card">
+                        <h1>Awesome Modern Design</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="future-text-card">
+                        <h1>Super Easy to Edit</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="future-banner-img">
+                <img src="./images/architect.png" alt="">
+                <button class="exp-btn btn">10 + Years <br>Experience</button>
+            </div>
+        </section>
+        <section class="section-three">
+            <div class="exp-section-one"> 
+                <h1>10</h1>
+                <h3>YEARS</h3>
+                <h6>EXPERIENCE</h6>
+            </div>
+            <div class="exp-section-two">
+                <h2>SECRETS OF SUCCESS <br>
+                OF OUR PROJECTS</h2>
+            </div>
+            <div class="exp-section-three">
+                Since 1980 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+            </div>
+        </section>
+        <section class="section-four">
+            <div class="facts">
+                <div class="facts-tittle">
+                    <h1>Some Facts</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                    </p>
+                </div>
+                <div class="facts-items">
+                    <div class="facts-item"> <img src="./images/icons/ribon.png" alt="">
+                    <h1>500</h1>
+                    <h5>Awards Winnings</h5></div>
+                    <div class="facts-item"> <img src="./images/icons/customers.png" alt="">
+                        <h1>500</h1>
+                        <h5>Awards Winnings</h5>
+                    </div>
+                    <div class="facts-item"> <img src="./images/icons/projects.png" alt="">
+                        <h1>500</h1>
+                        <h5>Awards Winnings</h5>
+                    </div>
+                    <div class="facts-item"> <img src="./images/icons/email.png" alt="">
+                        <h1>500</h1>
+                        <h5>Awards Winnings</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-four">
+            <div class="sponspors">
+                <h1>Our Sponsor's</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors-logo">
+                <img src="./images/sponsors/amazon.png" alt=""><img src="./images/sponsors/figma.png" alt=""><img src="./images/sponsors/google.png" alt=""><img src="./images/sponsors/spotify.png" alt=""><img src="./images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <h4>All rights reserved copyright@2023 startup landing page design</h4>
+    </footer>
 </body>
+
 </html>
