--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-four">
+        <section class="section-five">
             <div class="sponspors">
                 <h1>Our Sponsor's</h1>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
