--- a/index.html
+++ b/index.html
@@ -14,30 +14,39 @@
 </head>
 
 <body>
+    <!-- Start Header Section -->
     <header>
-        <nav>
-            <div class="nav-tittle">G3 Architects</div>
-            <div class="nav-items">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Login</a></li>
-                </ul>
+        <section class="section-header">
+            <!-- Start Navigation Section -->
+            <nav>
+                <div class="nav-tittle">G3 Architects</div>
+                <div class="nav-items">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- Start Header Text Section -->
+            <div class="brand-text-box">
+                <div class="band-text">
+                    <h1 class="brand-tittle">Brand New <br> Group of Architects</h1>
+                    <p class="brand-sub-tittle">Even the all-powerful Pointing has no control about the blind texts it
+                        is an almost unorthographic life One day however a small line of blind text by the name</p>
+                    <button class="brand-btn btn">Join Now</button>
+                </div>
             </div>
-        </nav>
-        <div class="brand-text-box">
-            <div class="band-text">
-                <h1 class="brand-tittle">Brand New <br> Group of Architects</h1>
-                <p class="brand-sub-tittle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="brand-btn btn">Join Now</button>
+            <!-- Header Banner Section -->
+            <div class="header-banner">
+                <img src="./images/banner.png" alt="">
             </div>
-        </div>
-        <div class="header-banner">
-            <img src="./images/banner.png" alt="">
-        </div>
+        </section>
     </header>
+    <!-- Start Main Section -->
     <main>
+        <!-- Start Section One -->
         <section class="section-one">
             <div class="future-img">
                 <div class="future-img-card">
@@ -54,32 +63,40 @@
                 </div>
             </div>
             <div class="future-text">
-                <h2><span class="future-text-quick">Quick List</span> of Our <br> <span class="primary-color">Features</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, illo totam?</p>
+                <h2><span class="future-text-quick">Quick List</span> of Our <br> <span
+                        class="primary-color">Features</span></h2>
+                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost orthographic
+                    life One day however a small line of blind text by the name</p>
                 <button class="btn">Explore More</button>
             </div>
         </section>
+        <!-- Start Section Two -->
         <section class="section-two">
             <div class="future-text-box">
                 <h2>Features you will <br> love & enjoy</h2>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost orthographic
+                    life One day however a small line of blind text by the name.
                 </p>
                 <div class="future-text-details">
                     <div class="future-text-card">
-                        <h1>Dexktop & Mobile Version</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <h1>Desktop & Mobile Version</h1>
+                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                            ocean. A small river named Duded flows by their place and supplies ........</p>
                     </div>
                     <div class="future-text-card">
                         <h1>Drag & Drop Builder</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                            ocean. A small river named Duden flows by their place and supplies ........</p>
                     </div>
                     <div class="future-text-card">
                         <h1>Awesome Modern Design</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                            ocean. A small river named Duden flows by their place and supplies ........</p>
                     </div>
                     <div class="future-text-card">
                         <h1>Super Easy to Edit</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                            ocean. A small river named Duden flows by their place and supplies ........</p>
                     </div>
                 </div>
             </div>
@@ -88,56 +105,70 @@
                 <button class="exp-btn btn">10 + Years <br>Experience</button>
             </div>
         </section>
+        <!-- Start Section Three -->
         <section class="section-three">
-            <div class="exp-section-one"> 
+            <div class="exp-section-one">
                 <h1>10</h1>
                 <h3>YEARS</h3>
                 <h6>EXPERIENCE</h6>
             </div>
             <div class="exp-section-two">
                 <h2>SECRETS OF SUCCESS <br>
-                OF OUR PROJECTS</h2>
+                    OF OUR PROJECTS</h2>
             </div>
             <div class="exp-section-three">
-                Since 1980 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                Since 1980 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a
+                large language ocean. Even the all-powerful Pointing has no control about the blind texts it is an
+                almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided
+                to leave for the far World of Grammar.
             </div>
         </section>
+        <!-- Start Section Four -->
         <section class="section-four">
             <div class="facts">
                 <div class="facts-tittle">
                     <h1>Some Facts</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+                        unorthographic life One day however a small line of blind text by the name.
                     </p>
                 </div>
                 <div class="facts-items">
                     <div class="facts-item"> <img src="./images/icons/ribon.png" alt="">
-                    <h1>500</h1>
-                    <h5>Awards Winnings</h5></div>
-                    <div class="facts-item"> <img src="./images/icons/customers.png" alt="">
-                        <h1>500</h1>
+                        <h1>54</h1>
                         <h5>Awards Winnings</h5>
+                    </div>
+                    <div class="facts-item"> <img src="./images/icons/customers.png" alt="">
+                        <h1>1458</h1>
+                        <h5>Project Finished</h5>
                     </div>
                     <div class="facts-item"> <img src="./images/icons/projects.png" alt="">
-                        <h1>500</h1>
-                        <h5>Awards Winnings</h5>
+                        <h1>590</h1>
+                        <h5>Clients Worked</h5>
                     </div>
                     <div class="facts-item"> <img src="./images/icons/email.png" alt="">
-                        <h1>500</h1>
-                        <h5>Awards Winnings</h5>
+                        <h1>22578</h1>
+                        <h5>Email Send</h5>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Start Section Five -->
         <section class="section-five">
             <div class="sponspors">
                 <h1>Our Sponsor's</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p>
+                    New Doublered Residence Facility Occupied and Second to Begin this Month
+                </p>
             </div>
             <div class="sponsors-logo">
-                <img src="./images/sponsors/amazon.png" alt=""><img src="./images/sponsors/figma.png" alt=""><img src="./images/sponsors/google.png" alt=""><img src="./images/sponsors/spotify.png" alt=""><img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt=""><img src="./images/sponsors/figma.png" alt=""><img
+                    src="./images/sponsors/google.png" alt=""><img src="./images/sponsors/spotify.png" alt=""><img
+                    src="./images/sponsors/telerama.png" alt="">
             </div>
         </section>
     </main>
+    <!-- Start Footer Section -->
     <footer>
         <h4>All rights reserved copyright@2023 startup landing page design</h4>
     </footer>
